--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
 
 #Due to a change in how the Jest library works with Create React App, we need to make a small modification
 script:
-  - docker run -e CI=true amirarreaza/docker-react npm run test -- --coverage
+  - docker run -e CI=true amirarreaza/docker-react npm run test
