--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t amirarreaza/docker-react -f DockerFile .
+  - docker build -t amirarreaza/docker-react -f Dockerfile .
 
 #Due to a change in how the Jest library works with Create React App, we need to make a small modification
 script:
